--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>祝你天天开心</title>
     <link rel="stylesheet" href = "./test.css"></link.rel>
 </head>
 <body>
     <div class="wrapper">
         <div class="typing-demo">
-            test typing animation~
+            过年了，过年了！
         </div>
     </div>
 
